# arctis-mixer

./: README.md
arctis-mixer/: Cargo.toml  release.sh
arctis-mixer-aur/: .SRCINFO  99-arctis-mixer.preset  PKGBUILD  arctis-mixer.service
arctis-mixer/contrib/: 99-arctis-mixer.rules
arctis-mixer/docs/: site.css  site.js
arctis-mixer/src/: main.rs  pipewire_mgr.rs
arctis-mixer/src/drivers/: mod.rs  nova7.rs
docs/: index.html
