[package]
name = "arctis-mixer"
version = "0.1.0"
edition = "2021"
description = "A zero-configuration, native Rust daemon that bridges SteelSeries ChatMix physical dials to PipeWire virtual audio sinks on Linux"
authors = ["Raimo Geisel"]
license = "GPL-3.0-only"
license-file = "../LICENSE"
repository = "https://github.com/Pommersche92/arctis-mixer"
homepage = "https://pommersche92.github.io/arctis-mixer/"
readme = "../README.md"
keywords = ["steelseries", "arctis", "chatmix", "pipewire", "audio"]
categories = ["audio", "hardware-support", "command-line-utilities"]

[dependencies]
hidapi = "2.6"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
